script link added to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,5 @@
 <header class="header" class="level">
     <p class="heading level-item has-text-primary has-background-white is-size-1">Peregrinate</p>
 </header>
-
-
+<script src="./assets/js/script.js"></script>
 </html>
