search bar added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 <body>
 <header class="header" class="level">
-    <p class="heading level-item has-text-primary has-background-white is-size-1">Peregrinate</p>
+    <p class="heading level-item has-text-info has-background-white is-size-1">Peregrinate</p>
 </header>
+
+<section class="hero is-medium is-info level-item">
+    <div class="hero-body">
+      <p class="title">
+        Enter a city to get started!
+      </p>
+      
+      <div class="columns search-button pt-4 subtitle buttons is-centered">
+        <input class="input is-medium is-centered" style="width: 33%;" type="text" placeholder="Paris" id="search-bar"><button class="button is-info mt-2 ml-5" id="search-button">Search</button>
+    </div>
+    </div>
+  </section>
+
+
 </body>
 </html>
