--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     </div>
   </section>
 
+  <section class="hero is-large is-info">
+    <div class="hero-body">
+      <p class="title">Flag</p>
+      <h1 class="exhange-rate">Exhange Rate</h1>
+    </div>
+  </section>
+
 
 </body>
 </html>
