--- a/index.html
+++ b/index.html
@@ -15,23 +15,31 @@
 
 <section class="hero is-medium is-info level-item">
     <div class="hero-body">
-      <p class="title">
+      <p class="title has-text-centered pb-5">
         Enter a city to get started!
       </p>
       
       <div class="columns search-button pt-4 subtitle buttons is-centered">
-        <input class="input is-medium is-centered" style="width: 33%;" type="text" placeholder="Paris" id="search-bar"><button class="button is-info mt-2 ml-5" id="search-button">Search</button>
+        <input class="input is-medium is-centered" style="width: 33%;" type="text" placeholder="Paris" id="search-bar"><button class="button is-info mt-2 ml-5" id="search-button"> <i class="fas fa-search"></i></button>
     </div>
     </div>
   </section>
 
-  <section class="hero is-large is-info">
-    <div class="hero-body">
-      <p class="title">Flag</p>
-      <h1 class="exhange-rate">Exhange Rate</h1>
+  <section class="hero is-small is-info">
+    <div class="columns hero-body is-centered">
+      <h1 class="title-flag">Flag</h1>
+      
     </div>
   </section>
 
+  <section class="hero is-medium is-info">
+    <div class="columns hero-body is-centered">
+  
+      <h2 class="exhange-rate">Exhange Rate</h2>
+    </div>
+  </section>
 
+  <script src="https://kit.fontawesome.com/d93e5dd24b.js" crossorigin="anonymous"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
