--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="header" class="level">
-    <p class="heading level-item has-text-info has-background-white is-size-1">Peregrinate</p>
+    <p class="heading level-item has-text-info has-background-white is-size-1">Peregrinate<i class=" fas fa-map"></i></p>
 </header>
 
 <section class="hero is-medium is-info level-item">
