Defined countries and currency codes

--- a/index.html
+++ b/index.html
@@ -31,50 +31,50 @@
         </div>
         <div class="dropdown-menu" id="dropdown-menu" role="menu">
           <div class="dropdown-content level-item">
-            <a class="dropdown-item">
-              Country
+            <a class="dropdown-item" data-currency-code="GBP" id="">
+              United Kingdom
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="CAD" id="">
+              Canada
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="MXN" id="">
+              Mexico
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="EUR" id="">
+              European Union
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="RUB" id="">
+              Russia
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="BRL" id="">
+              Brazil
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="AUD" id="">
+              Australia
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="PEN" id="">
+              Peru
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="ZAR" id="">
+              South Africa
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="IDR" id="">
+              Indonesia
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="CNY" id="">
+              China
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="JPY" id="">
+              Japan
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="KRW" id="">
+              South Korea
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="DKK" id="">
+              Denmark
             </a>
-            <a class="dropdown-item" id="">
-              Country
+            <a class="dropdown-item" data-currency-code="SEK" id="">
+              Sweeden
             </a>
          
             
