--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               Denmark
             </a>
             <a class="dropdown-item" data-currency-code="SEK" id="">
-              Sweeden
+              Sweden
             </a>
          
             
