added element generation

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <div class="columns hero-body is-centered">
   
       <h2 class="exhange-rate">Exhange Rate</h2>
+      <div class="exchange-rate-container"></div>
     </div>
   </section>
 
