enabled exchange rate functionality

--- a/index.html
+++ b/index.html
@@ -95,12 +95,8 @@
   <section class="hero is-medium is-info">
     <div class="columns hero-body is-centered">
   
-      <h2 class="exhange-rate">Exhange Rate</h2>
-<<<<<<< HEAD
-      <div class="exchange-rate-container"></div>
-=======
-      <p class="exchange-rate-display">1 USD = </p>
->>>>>>> 8db4221b5e2a3c34ac5fe76591fbc22e393e7b5f
+      <h2 class="exchange-rate">Exhange Rate</h2>
+      <p class="exchange-rate-display"></p>
     </div>
   </section>
 
