fix dropdown, tweak displays

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peregrinate</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 </head>
 
@@ -17,7 +17,7 @@
                 class=" fas fa-map"></i></p>
     </header>
 
-    <section class="hero is-medium is-info level-item">
+    <section class="hero is-small is-info level-item">
         <div class="hero-body">
             <p class="title has-text-centered pb-5">
                 Select a country to get started!
@@ -33,7 +33,7 @@
                     </button>
                 </div>
                 <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                    <div class="dropdown-content level-item">
+                    <div class="dropdown-content">
                         <a class="dropdown-item" data-currency-code="GBP" data-flag-code="gb" id="">
                             United Kingdom
                         </a>
@@ -95,7 +95,7 @@
         <div><img class="flag-img"/></div>
     </section>
 
-    <section class="hero is-medium is-info">
+    <section class="hero is-small is-info">
         <div class="columns hero-body is-centered">
 
             <h2 class="exchange-rate">Exchange Rate</h2>
